# Rust-ConfigParser

./: .gitignore  Cargo.toml  README.md  changelog.md  config.cfg
.github/workflows/: main.yml
benches/: bench.rs
src/: config.rs  lib.rs
testing/: Cargo.toml
testing/src/: main.rs
tests/: config.cfg  test.rs
