[package]
name = "simple_config_parser"
version = "0.1.1"
authors = ["Connor Slade <connor@connorcode.com>"]
edition = "2018"
repository = "https://github.com/Basicprogrammer10/Rust-ConfigParser"
description = "A simple configuration file parser"
license-file = "LICENSE"
readme = "README.md"

[dependencies]
