[package]
name = "simple_config_parser"
version = "0.1.6"
edition = "2018"
authors = ["Connor Slade <connor@connorcode.com>"]
repository = "https://github.com/Basicprogrammer10/Rust-ConfigParser"
documentation = "https://docs.rs/simple_config_parser"
description = "A simple configuration file parser"
keywords = ["Config", "ConfigFile", "ConfigParser", "ini", "iniParseing"]
categories = ["config", "filesystem", "parsing"]
license-file = "LICENSE"
readme = "README.md"

[dependencies]
